INCLUDES = $(DRIVER_INCLUDES)

bin_PROGRAMS = dvbsnoop

dvbsnoop_SOURCES = \
	bat.c dit.c dvbsnoop.c helper.c pat.c rst.c st.c tslayer.c cat.c \
	dmx_pes.c dvb_str.c hexprint.c pespacket.c sdt.c tdt.c cmdline.c \
	dmx_sect.c eit.c nit.c pkt_time.c sectables.c tot.c descriptor.c \
	dmx_ts.c emm_ecm.c output.c pmt.c sit.c tsdt.c

