INCLUDES = $(DRIVER_INCLUDES)

bin_PROGRAMS = dvbsnoop

noinst_HEADERS = \
	bat.h dit.h dvbsnoop.h helper.h pat.h rst.h st.h tslayer.h cat.h \
	dmx_pes.h dvb_str.h hexprint.h pespacket.h sdt.h tdt.h cmdline.h \
	dmx_sect.h eit.h nit.h pkt_time.h sectables.h tot.h descriptor.h \
	dmx_ts.h emm_ecm.h output.h pmt.h sit.h tsdt.h

dvbsnoop_SOURCES = \
	bat.c dit.c dvbsnoop.c helper.c pat.c rst.c st.c tslayer.c cat.c \
	dmx_pes.c dvb_str.c hexprint.c pespacket.c sdt.c tdt.c cmdline.c \
	dmx_sect.c eit.c nit.c pkt_time.c sectables.c tot.c descriptor.c \
	dmx_ts.c emm_ecm.c output.c pmt.c sit.c tsdt.c

