AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libdvbsi++.la

libdvbsi___la_LDFLAGS = \
	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)

libdvbsi___la_SOURCES = \
	aac_descriptor.cpp \
	ac3_descriptor.cpp \
	adaptation_field_data_descriptor.cpp \
	ancillary_data_descriptor.cpp \
	announcement_support_descriptor.cpp \
	audio_stream_descriptor.cpp \
	application_descriptor.cpp \
	application_icons_descriptor.cpp \
	application_identifier.cpp \
	application_information_section.cpp \
	application_name_descriptor.cpp \
	application_profile.cpp \
	application_signalling_descriptor.cpp \
	application_storage_descriptor.cpp \
	bouquet_association_section.cpp \
	bouquet_name_descriptor.cpp \
	ca_descriptor.cpp \
	ca_identifier_descriptor.cpp \
	ca_message_section.cpp \
	ca_program_map_section.cpp \
	ca_section.cpp \
	cable_delivery_system_descriptor.cpp \
	caching_priority_descriptor.cpp \
	carousel_identifier_descriptor.cpp \
	cell_frequency_link_descriptor.cpp \
	cell_list_descriptor.cpp \
	component_descriptor.cpp \
	compressed_module_descriptor.cpp \
	content_descriptor.cpp \
	content_identifier_descriptor.cpp \
	content_identifier_section.cpp \
	content_type_descriptor.cpp \
	country_availability_descriptor.cpp \
	crc32_descriptor.cpp \
	data_broadcast_descriptor.cpp \
	data_broadcast_id_descriptor.cpp \
	default_authority_descriptor.cpp \
	delegated_application_descriptor.cpp \
	descriptor.cpp \
	descriptor_container.cpp \
	dii_location_descriptor.cpp \
	dsng_descriptor.cpp \
	dts_descriptor.cpp \
	dvb_html_application_boundary_descriptor.cpp \
	dvb_html_application_descriptor.cpp \
	dvb_html_application_location_descriptor.cpp \
	dvb_j_application_descriptor.cpp \
	dvb_j_application_location_descriptor.cpp \
	ecm_repetition_rate_descriptor.cpp \
	enhanced_ac3_descriptor.cpp \
	est_download_time_descriptor.cpp \
	event_information_section.cpp \
	extension_descriptor.cpp \
	external_application_authorisation_descriptor.cpp \
	extended_event_descriptor.cpp \
	frequency_list_descriptor.cpp \
	group_link_descriptor.cpp \
	info_descriptor.cpp \
	ip_signaling_descriptor.cpp \
	iso639_language_descriptor.cpp \
	label_descriptor.cpp \
	linkage_descriptor.cpp \
	local_time_offset_descriptor.cpp \
	location_descriptor.cpp \
	long_crc_section.cpp \
	long_section.cpp \
	module_link_descriptor.cpp \
	mosaic_descriptor.cpp \
	mpe_fec_section.cpp \
	multilingual_bouquet_name_descriptor.cpp \
	multilingual_component_descriptor.cpp \
	multilingual_network_name_descriptor.cpp \
	multilingual_service_name_descriptor.cpp \
	name_descriptor.cpp \
	network_information_section.cpp \
	network_name_descriptor.cpp \
	nvod_reference_descriptor.cpp \
	parental_rating_descriptor.cpp \
	pdc_descriptor.cpp \
	plugin_descriptor.cpp \
	prefetch_descriptor.cpp \
	private_data_specifier_descriptor.cpp \
	program_association_section.cpp \
	program_map_section.cpp \
	related_content_descriptor.cpp \
	running_status_section.cpp \
	satellite_delivery_system_descriptor.cpp \
	s2_satellite_delivery_system_descriptor.cpp \
	scrambling_descriptor.cpp \
	service_description_section.cpp \
	service_descriptor.cpp \
	service_identifier_descriptor.cpp \
	service_list_descriptor.cpp \
	service_move_descriptor.cpp \
	short_crc_section.cpp \
	short_event_descriptor.cpp \
	short_section.cpp \
	stream_identifier_descriptor.cpp \
	stuffing_descriptor.cpp \
	subtitling_descriptor.cpp \
	target_background_grid_descriptor.cpp \
	telephone_descriptor.cpp \
	teletext_descriptor.cpp \
	terrestrial_delivery_system_descriptor.cpp \
	time_date_section.cpp \
	time_offset_section.cpp \
	time_shifted_service_descriptor.cpp \
	time_slice_fec_identifier_descriptor.cpp \
	transport_protocol_descriptor.cpp \
	transport_stream_descriptor.cpp \
	transport_stream_description_section.cpp \
	tva_id_descriptor.cpp \
	type_descriptor.cpp \
	unknown_descriptor.cpp \
	vbi_data_descriptor.cpp \
	vbi_teletext_descriptor.cpp \
	video_stream_descriptor.cpp \
	video_window_descriptor.cpp

