# was ist mit $(DRIVER) passiert? verdammt...
INCLUDES = -I$(top_srcdir)/../../../driver/dvb/include

bin_PROGRAMS = \
	diseqc \
	set22k \
	sendburst \
	setvoltage \
	setpid \
	video \
	test_sections \
	test_sec_ne \
	test_pes \
	test_tt \
	test_av \
	test_stillimage

diseqc_SOURCES = diseqc.c
set22k_SOURCES = set22k.c
sendburst_SOURCES = sendburst.c
setvoltage_SOURCES = setvoltage.c
setpid_SOURCES = setpid.c
video_SOURCES = video.c
test_sections_SOURCES = test_sections.c hex_dump.c
test_sec_ne_SOURCES = test_sec_ne.c hex_dump.c
test_pes_SOURCES = test_pes.c hex_dump.c
test_tt_SOURCES = test_tt.c hex_dump.c
test_av_SOURCES = test_av.c
test_stillimage_SOURCES = test_stillimage.c

