bin_PROGRAMS = \
	diseqc \
	set22k \
	sendburst \
	setvoltage \
	setpid \
	video \
	test_clip \
	test_clip_vls \
	stream_to_ts \
	test_clip_pes \
	test_sections \
	test_sec_ne \
	test_pes \
	test_tt \
	test_av \
	test_stillimage

diseqc_SOURCES = diseqc.c
set22k_SOURCES = set22k.c
sendburst_SOURCES = sendburst.c
setvoltage_SOURCES = setvoltage.c
setpid_SOURCES = setpid.c
video_SOURCES = video.c
test_clip_SOURCES = test_clip.c
test_clip_pes_SOURCES = test_clip_pes.c
test_sections_SOURCES = test_sections.c hex_dump.c
test_sec_ne_SOURCES = test_sec_ne.c hex_dump.c
test_pes_SOURCES = test_pes.c hex_dump.c
test_tt_SOURCES = test_tt.c hex_dump.c
test_av_SOURCES = test_av.c
test_stillimage_SOURCES = test_stillimage.c

AM_CFLAGS = -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE

