lib_LTLIBRARIES  = libtuxbox-connection.la

libtuxbox_connection_la_SOURCES = basicclient.cpp basicserver.cpp basicsocket.cpp messagetools.cpp

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = tuxbox-connection.pc
pkgincludedir = ${includedir}/tuxbox/connection
pkginclude_HEADERS = basicclient.h basicmessage.h basicserver.h basicsocket.h messagetools.h
